LayoutTests/imported/w3c/web-platform-tests/worklets/idlharness.worker-expected.txt

FAIL worklets interfaces promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1:
{"error": {"code"
^ Unrecognised tokens"

